--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -5,10 +5,11 @@
   "author": "WWA Wing Team",
   "license": "MIT",
   "scripts": {
-    "make-zip": "npm run clean && ts-node ./scripts",
-    "upload-zip": "ts-node ./scripts/upload-zip",
+    "release": "run-s release:make-zip release:upload-zip",
+    "release:make-zip": "npm run clean && ts-node ./scripts",
+    "release:upload-zip": "ts-node ./scripts/upload-zip",
     "clean": "shx rm -rf dist",
-    "prepare": "npm run make-zip"
+    "prepare": "npm run release:make-zip"
   },
   "files": [
     "dist"
@@ -28,6 +29,7 @@
     "@wwawing/loader": "^3.5.12",
     "@wwawing/page-generator": "^3.5.12",
     "@wwawing/styles": "^3.5.12",
+    "npm-run-all": "^4.1.5",
     "jszip": "^3.6.0",
     "shelljs": "^0.8.4",
     "shx": "^0.3.3",
