--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -52,7 +52,7 @@
     "@wwawing/loader": "^3.5.12",
     "@wwawing/page-generator": "^3.5.12",
     "@wwawing/styles": "^3.5.12",
-    "crypto-js": "^4.0.0",
+    "crypto-js": "4.0.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "shelljs": "^0.8.4",
