--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: "WWA Wing Release"
 
 on:
-  push:
-    branches: [ master ]
+  release:
+    types:
+      - created
 
   workflow_dispatch:
 
