--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   base = "/"
   publish = "packages/engine/lib"
-  # npm i の段階で prepareスクリプトが走って production ビルドされるので、できているものをデプロイする
-  command = "npm run bootstrap:netlify && npm run deploy"
+  command = "npm run build && npm run deploy"
 
 [build.environment]
+  NODE_VERSION = "14.18.3"
+  NPM_VERSION = "8"
   # node-gyp が v3.6.0 以上の Python を要求している
   PYTHON_VERSION = "3.7"
