--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -12,8 +12,7 @@
     "build": "tsc -p .",
     "generate": "shx mkdir -p bin && nexe --target=win32-x86-12.18.2 --cwd . --output bin/wwa-server.exe",
     "clean": "shx rm -rf debug lib bin",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run build && npm run generate"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "WWA Wing Team",
   "license": "MIT",
