--- a/packages/page-generator/package.json
+++ b/packages/page-generator/package.json
@@ -12,8 +12,7 @@
     "build:module": "tsc -p ./tsconfig.module.json && shx cp ./src/wwa.pug ./module/wwa.pug",
     "clean": "run-s clean:*",
     "clean:lib": "shx rm -rf ./lib",
-    "clean:module": "shx rm -rf ./module",
-    "prepare": "npm run build"
+    "clean:module": "shx rm -rf ./module"
   },
   "files": [
     "lib",
