--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -14,8 +14,8 @@
   "author": "WWA Wing Team",
   "license": "MIT",
   "devDependencies": {
-    "@types/node-sass": "^4.11.2",
-    "node-sass": "^7.0.1",
+    "@types/sass": "^1.43.1",
+    "sass": "^1.49.0",
     "shx": "^0.3.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
