--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -16,10 +16,10 @@
     "build:dev": "webpack -w",
     "deploy:prod": "shx mkdir -p lib && run-p deploy:common:* deploy:prod:*",
     "deploy:dev": "shx mkdir -p lib && run-p deploy:common:* deploy:dev:*",
-    "deploy:common:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
-    "deploy:common:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
-    "deploy:common:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
-    "deploy:common:style": "shx cp ./node_modules/@wwawing/styles/output/*.* lib/ && shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
+    "deploy:common:audio": "shx cp -R ../../node_modules/@wwawing/assets/audio lib/",
+    "deploy:common:images": "shx cp ../../node_modules/@wwawing/assets/images/*.* lib/",
+    "deploy:common:mapdata": "shx cp ../../node_modules/@wwawing/assets/mapdata/*.* lib/",
+    "deploy:common:style": "shx cp ../../node_modules/@wwawing/styles/output/*.* lib/ && shx cp ../../node_modules/@wwawing/assets/style/*.* lib/",
     "deploy:prod:html": "ts-node ./debug/make-debug-pages",
     "deploy:dev:html": "ts-node ./debug/make-debug-pages dev",
     "clean": "shx rm -rf lib",
