--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,9 @@ jobs:
           git config user.email "matsuyuki.eca@gmail.com"
 
       - name: "Install"
-        run: "npm install"
+        run: |
+          npm i -g npm@8
+          npm install
       
       - name: "Publish"
         run: "npm run publish:all -- ${{ github.event.inputs.version }} --dist-tag ${{ github.event.inputs.tag }} --no-verify-access --yes"
