--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,9 @@ jobs:
           npm install
       
       - name: "Publish"
-        run: "npm run publish:all -- ${{ github.event.inputs.version }} --dist-tag ${{ github.event.inputs.tag }} --no-verify-access --yes"
+        run: |
+         npm run version-up -- ${{ github.event.inputs.version }} --yes
+         npm run publish:all --dist-tag ${{ github.event.inputs.tag }} --no-verify-access --yes
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
