--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "deploy": "lerna run deploy:prod --scope @wwawing/engine",
     "generate": "lerna run generate --stream",
     "make-dist": "npm run build && lerna run make-dist --stream",
-    "publish:all": "run-s build generate && lerna publish"
+    "version-up": "lerna version",
+    "publish:all": "run-s build generate && lerna publish from-package"
   },
   "repository": {
     "type": "git",
