--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,8 +35,15 @@ jobs:
           npm install
       
       - name: "Publish"
+        # lerna version でバージョンを上げた後、npm i をすると package-lock.json に差分が出てしまうので...
         run: |
-         npm run version-up -- ${{ github.event.inputs.version }} --yes
-         npm run publish:all -- --dist-tag ${{ github.event.inputs.tag }} --no-verify-access --yes
+          npm run version-up -- ${{ github.event.inputs.version }} --yes
+          export NEW_VERSION=$(node -e 'process.stdout.write(require("./lerna.json").version)')
+          npm install
+          git add -u package-lock.json
+          git commit -m "v$NEW_VERSION"
+          git tag "v$NEW_VERSION"
+          git push origin HEAD --tags
+          npm run publish:all -- --dist-tag ${{ github.event.inputs.tag }} --no-verify-access --yes
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
