--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/all",
-  "version": "3.6.7",
+  "version": "3.6.6",
   "description": "World Wide Adventure: an RPG Engine.",
   "author": "WWA Wing Team",
   "license": "MIT",
@@ -22,13 +22,13 @@
     "@octokit/rest": "^18.5.3",
     "@types/jszip": "^3.4.1",
     "@types/shelljs": "^0.8.8",
-    "@wwawing/assets": "^3.6.7",
-    "@wwawing/common-interface": "^3.6.7",
-    "@wwawing/debug-server": "^3.6.7",
-    "@wwawing/engine": "^3.6.7",
-    "@wwawing/loader": "^3.6.7",
-    "@wwawing/page-generator": "^3.6.7",
-    "@wwawing/styles": "^3.6.7",
+    "@wwawing/assets": "3.6.6",
+    "@wwawing/common-interface": "3.6.6",
+    "@wwawing/debug-server": "3.6.6",
+    "@wwawing/engine": "^3.6.6",
+    "@wwawing/loader": "^3.6.6",
+    "@wwawing/page-generator": "3.6.6",
+    "@wwawing/styles": "3.6.6",
     "jszip": "^3.6.0",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4",
