--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/engine",
-  "version": "3.6.7",
+  "version": "3.6.6",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "./lib/wwa.js",
   "files": [
@@ -44,13 +44,13 @@
     "@types/pug": "^2.0.4",
     "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack": "^5.28.0",
-    "@wwawing/assets": "^3.6.7",
-    "@wwawing/common-interface": "^3.6.7",
-    "@wwawing/debug-server": "^3.6.7",
-    "@wwawing/event-emitter": "^3.6.7",
-    "@wwawing/loader": "^3.6.7",
-    "@wwawing/page-generator": "^3.6.7",
-    "@wwawing/styles": "^3.6.7",
+    "@wwawing/assets": "3.6.6",
+    "@wwawing/common-interface": "3.6.6",
+    "@wwawing/debug-server": "3.6.6",
+    "@wwawing/event-emitter": "3.6.6",
+    "@wwawing/loader": "^3.6.6",
+    "@wwawing/page-generator": "3.6.6",
+    "@wwawing/styles": "3.6.6",
     "crypto-js": "4.0.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
