--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -25,8 +25,8 @@
     "@wwawing/assets": "3.6.6",
     "@wwawing/common-interface": "3.6.6",
     "@wwawing/debug-server": "3.6.6",
-    "@wwawing/engine": "^3.6.6",
-    "@wwawing/loader": "^3.6.6",
+    "@wwawing/engine": "3.6.6",
+    "@wwawing/loader": "3.6.6",
     "@wwawing/page-generator": "3.6.6",
     "@wwawing/styles": "3.6.6",
     "jszip": "^3.6.0",
