--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -22,13 +22,13 @@
     "@octokit/rest": "^18.5.3",
     "@types/jszip": "^3.4.1",
     "@types/shelljs": "^0.8.8",
-    "@wwawing/assets": "3.6.6",
-    "@wwawing/common-interface": "3.6.6",
-    "@wwawing/debug-server": "3.6.6",
-    "@wwawing/engine": "3.6.6",
-    "@wwawing/loader": "3.6.6",
-    "@wwawing/page-generator": "3.6.6",
-    "@wwawing/styles": "3.6.6",
+    "@wwawing/assets": "file:../assets",
+    "@wwawing/common-interface": "file:../common-interface",
+    "@wwawing/debug-server": "file:../debug-server",
+    "@wwawing/engine": "file:../engine",
+    "@wwawing/loader": "file:../loader",
+    "@wwawing/page-generator": "file:../page-generator",
+    "@wwawing/styles": "file:../styles",
     "jszip": "^3.6.0",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4",
