--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -44,10 +44,10 @@
   },
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
   "dependencies": {
-    "@wwawing/event-emitter": "3.6.6"
+    "@wwawing/event-emitter": "file:../event-emitter"
   },
   "devDependencies": {
-    "@wwawing/common-interface": "3.6.6",
+    "@wwawing/common-interface": "file:../common-interface",
     "cross-env": "^7.0.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.5.0",
