--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
           npm run version-up -- ${{ github.event.inputs.version }} --yes
           export NEW_VERSION=$(node -e 'process.stdout.write(require("./lerna.json").version)')
           npm install
-          git add -u package-lock.json
+          git add -u package-lock.json lerna.json packages/*/package.json
           git commit -m "v$NEW_VERSION"
           git tag "v$NEW_VERSION"
           git push origin HEAD --tags
