fix(release): ビルドしてからリリースする

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           npm i -g npm@8
           npm install
+          npm run build
 
       - name: "Upload distributions"
         env:
