--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,12 @@ jobs:
       - name: "Set Env"
         run: "echo \"WWA_WING_VERSION=$(node -e \"console.log(require('./packages/engine/package.json').version)\")\" >> $GITHUB_ENV"
 
-      - name: "Install"
+      - name: "Install & Build"
         run: |
           npm i -g npm@8
           npm install
           npm run build
+          npm run generate
 
       - name: "Upload distributions"
         env:
