fix(var-div): ゼロ除算の結果が仕様通りにならない不具合を修正

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   publish = "packages/engine/lib"
-  command = "npm run build && npm run deploy"
+  command = "npm i && npm run build && npm run deploy"
 
 [build.environment]
   NODE_VERSION = "16.13.2"
