fix: publishConfig を設定, 乗算を変更

--- a/packages/virtual-pad/package.json
+++ b/packages/virtual-pad/package.json
@@ -12,5 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^4.2.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
