refactor(loader): XHR から fetch に移行

--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wwawing/event-emitter",
   "version": "3.7.4",
-  "description": "nodeでもモダンブラウザでもIE11でも使えるすごいEventEmitter",
+  "description": "nodeでもブラウザでも使えるすごいEventEmitter",
   "files": [
     "lib",
     "module"
