--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -53,7 +53,7 @@
     "@wwawing/page-generator": "file:../page-generator",
     "@wwawing/styles": "file:../styles",
     "@wwawing/virtual-pad": "file:../virtual-pad",
-    "crypto-js": "4.0.0",
+    "crypto-js": "^4.1.1",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "shelljs": "^0.8.5",
