--- a/packages/virtual-pad/tsconfig.json
+++ b/packages/virtual-pad/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./lib",
-    "module": "esnext"
+    "module": "esnext",
+    "strict": true,
+    "noImplicitAny": true,
   },
   "include": [
     "src/**/*.ts"
