--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/event-emitter",
-  "version": "3.10.0-beta.4",
+  "version": "3.9.5",
   "description": "nodeでもモダンブラウザでもIE11でも使えるすごいEventEmitter",
   "files": [
     "lib",
