--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/styles",
-  "version": "3.10.0-beta.6",
+  "version": "3.9.7",
   "description": "WWA Wing stylesheet files",
   "main": "index.js",
   "files": [
