--- a/packages/virtual-pad/package.json
+++ b/packages/virtual-pad/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/virtual-pad",
-  "version": "3.10.0-beta.6",
+  "version": "3.9.7",
   "description": "WWA Wing Virtual Pad for mobile phone",
   "main": "lib/index.js",
   "scripts": {
