--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/assets",
-  "version": "3.11.0-new-message-system.based-on.3.10.1",
+  "version": "3.10.1",
   "description": "WWA Wing asset files",
   "main": "index.js",
   "files": [
