--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/common-interface",
-  "version": "3.11.0-new-message-system.based-on.3.10.1",
+  "version": "3.10.1",
   "description": "",
   "sideEffects": false,
   "main": "lib/index.js",
