--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/debug-server",
-  "version": "3.11.0-new-message-system.based-on.3.10.1",
+  "version": "3.10.1",
   "description": "wwawing debug server",
   "main": "lib/index.js",
   "files": [
