--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/event-emitter",
-  "version": "3.11.0-new-message-system.based-on.3.10.1",
+  "version": "3.10.1",
   "description": "nodeでもモダンブラウザでもIE11でも使えるすごいEventEmitter",
   "files": [
     "lib",
