--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -9,7 +9,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "run-p build:dev deploy:dev server",
     "build": "npm-run-all clean build:prod",
     "build:prod": "webpack --config webpack.config.prod.ts",
@@ -41,7 +41,10 @@
   },
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
+    "@swc/core": "^1.3.59",
+    "@swc/jest": "^0.2.26",
     "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^29.5.1",
     "@types/pug": "^2.0.6",
     "@types/terser-webpack-plugin": "^5.2.0",
     "@types/webpack": "^5.28.0",
@@ -54,6 +57,9 @@
     "@wwawing/styles": "file:../styles",
     "@wwawing/virtual-pad": "file:../virtual-pad",
     "crypto-js": "^4.1.1",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "shelljs": "^0.8.5",
