--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,12 +22,19 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+          cache: npm
           registry-url: 'https://registry.npmjs.org'
       
       - name: "Configure"
         run: |
           git config user.name "[Automatically Released] Matsuyuki"
           git config user.email "matsuyuki.eca@gmail.com"
+
+      - name: restore node_modules
+        uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
 
       - name: "Install"
         run: |
