--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -19,8 +19,10 @@
   "devDependencies": {
     "@types/express": "4.17.14",
     "@types/node": "^18.11.9",
+    "@types/serve-index": "1.9.1",
     "express": "^4.18.1",
     "pkg": "^5.8.0",
+    "serve-index": "1.9.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "typescript": "^5.0.4"
