--- a/packages/common-interface/tsconfig.json
+++ b/packages/common-interface/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "strict": true,
     "rootDir": "./src",
     "outDir": "./lib",
     "module": "esnext"
