--- a/packages/debug-server/tsconfig.json
+++ b/packages/debug-server/tsconfig.json
@@ -4,9 +4,7 @@
     "rootDir": "./src",
     "outDir": "./lib",
     "lib": [
-      "es2016",
-      "es2015",
-      "es5",
+      "esnext",
       "dom"
     ],
     "strict": true,
