--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -21,6 +21,7 @@
     "deploy:common:mapdata": "shx cp ../../node_modules/@wwawing/assets/mapdata/*.* lib/",
     "deploy:common:vars": "shx cp ../../node_modules/@wwawing/assets/vars/*.* lib/",
     "deploy:common:style": "shx cp ../../node_modules/@wwawing/styles/output/*.* lib/ && shx cp ../../node_modules/@wwawing/assets/style/*.* lib/",
+    "deploy:common:scripts": "shx cp ../../node_modules/@wwawing/assets/script/*.* lib/",
     "deploy:prod:html": "ts-node ./debug/make-debug-pages",
     "deploy:dev:html": "ts-node ./debug/make-debug-pages dev",
     "clean": "shx rm -rf lib",
