Revert "v4.1.0-unstable.based-on.3.12.11"
This reverts commit b5cdb9edba2e42e7719000d99ed09d66e3595d3c.

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/engine",
-  "version": "4.1.0-unstable.based-on.3.12.11",
+  "version": "3.12.11",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "./lib/wwa.js",
   "files": [
