--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/common-interface",
-  "version": "4.1.0-unstable.based-on.3.12.11",
+  "version": "3.13.0-unstable.based-on.3.12.11.p.12",
   "description": "",
   "sideEffects": false,
   "main": "lib/index.js",
