--- a/packages/serve-index/package.json
+++ b/packages/serve-index/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "serve-index",
+  "name": "@wwawing/serve-index",
   "description": "Serve directory listings",
-  "version": "1.9.1",
-  "author": "Douglas Christopher Wilson <doug@somethingdoug.com>",
+  "version": "3.12.11",
+  "author": "Douglas Christopher Wilson <doug@somethingdoug.com>, WWA Wing Team",
   "license": "MIT",
-  "repository": "expressjs/serve-index",
+  "types": "./types/index.d.ts",
+  "files": [
+    "public/",
+    "types/",
+    "LICENSE",
+    "index.js"
+  ],
+  "scripts": {
+    "lint": "eslint .",
+    "test": "jest"
+  },
   "dependencies": {
     "accepts": "~1.3.7",
     "batch": "0.6.1",
@@ -18,23 +28,10 @@
     "after": "0.8.2",
     "eslint": "7.23.0",
     "eslint-plugin-markdown": "2.0.0",
-    "mocha": "10.4.0",
-    "nyc": "15.1.0",
     "supertest": "7.0.0"
   },
-  "files": [
-    "public/",
-    "LICENSE",
-    "HISTORY.md",
-    "index.js"
-  ],
   "engines": {
-    "node": ">= 0.8.0"
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "test": "mocha --reporter spec --bail --check-leaks test/",
-    "test-ci": "nyc --reporter=lcov --reporter=text npm test",
-    "test-cov": "nyc --reporter=html --reporter=text npm test"
+    "node": ">=22",
+    "npm": ">=10"
   }
 }
