--- a/packages/serve-index/package.json
+++ b/packages/serve-index/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "accepts": "~1.3.7",
     "batch": "0.6.1",
+    "css.escape": "^1.5.1",
     "debug": "2.6.9",
     "escape-html": "~1.0.3",
     "http-errors": "~1.8.0",
