--- a/packages/serve-index/package.json
+++ b/packages/serve-index/package.json
@@ -31,6 +31,9 @@
     "eslint-plugin-markdown": "2.0.0",
     "supertest": "7.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">=22",
     "npm": ">=10"
