--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   },
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
+    "@swc/core": "^1.10.4",
+    "@swc/helpers": "^0.5.15",
     "@types/node": "^22.10.1",
     "lerna": "^8.1.9",
     "npm-run-all": "^4.1.5",
-    "ts-node": "^10.9.1",
+    "regenerator-runtime": "^0.14.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "engines": {
