--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,12 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
 
+      - name: restore node.exe
+        uses: actions/cache@v4
+        with:
+          path: './packages/assets/exe/node.exe'
+          key: node-exe-${{ hashFiles('./packages/assets/exe/node.exe') }}
+
       - name: "Install & Build"
         run: |
           npm i -g npm@10
