--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -35,6 +35,7 @@
     "resolve-pkg": "^2.0.0",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "webpack": "^5.83.1",
