--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,27 +6,13 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
-          registry-url: 'https://registry.npmjs.org'
-      
-      - name: restore node_modules
-        uses: actions/cache@v4
+          lfs: true
+      - uses: ./.github/actions/init
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-
-      - name: "Install & Build"
-        run: |
-          npm i -g npm@10
-          npm install
-          npm run build
-
+          lfs: true
       - name: "test"
         run: |
           npm test
