--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -31,7 +31,7 @@
     "@wwawing/serve-index": "file:../serve-index",
     "@wwawing/styles": "file:../styles",
     "jszip": "^3.10.1",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "ts-node": "^10.9.2",
