--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -27,7 +27,7 @@
     "@types/express": "4.17.14",
     "@types/node": "^22.10.1",
     "express": "^4.21.2",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.1",
     "postject": "^1.0.0-alpha.6",
     "resolve-pkg": "^2.0.0",
     "shelljs": "^0.8.5",
