--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -60,7 +60,7 @@
     "jest": "^29.5.0",
     "jest-cli": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.1",
     "pug": "^3.0.2",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
