--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -22,7 +22,7 @@
   "author": "WWA Wing Team",
   "license": "MIT",
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "typescript": "^5.7.2"
