--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -52,7 +52,7 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "ts-loader": "^9.5.2",
