--- a/packages/page-generator/package.json
+++ b/packages/page-generator/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@types/node": "^22.10.1",
     "@types/pug": "^2.0.6",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "typescript": "^5.7.2"
