feat(quick-load): 循環参照オブジェクトが保存可能になった

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -56,8 +56,10 @@
     "@wwawing/loader": "file:../loader",
     "@wwawing/page-generator": "file:../page-generator",
     "@wwawing/styles": "file:../styles",
+    "@wwawing/util": "file:../util",
     "@wwawing/virtual-pad": "file:../virtual-pad",
     "crypto-js": "^4.1.1",
+    "flatted": "^3.3.3",
     "jest": "^29.5.0",
     "jest-cli": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
