--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -19,5 +19,8 @@
     "shelljs": "^0.9.2",
     "shx": "^0.4.0",
     "typescript": "^5.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
