--- a/lerna.json
+++ b/lerna.json
@@ -8,5 +8,5 @@
       "graphType": "all"
     }
   },
-  "version": "4.1.0-picture-performance.based-on.3.12.17"
+  "version": "4.1.0-unstable.based-on.3.12.17"
 }
