--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/all",
-  "version": "4.1.0-picture-performance.based-on.3.12.17",
+  "version": "4.1.0-unstable.based-on.3.12.17",
   "description": "World Wide Adventure: an RPG Engine.",
   "author": "WWA Wing Team",
   "license": "MIT",
