--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/event-emitter",
-  "version": "4.1.0-picture-performance.based-on.3.12.17",
+  "version": "4.1.0-unstable.based-on.3.12.17",
   "description": "nodeでもモダンブラウザでもIE11でも使えるすごいEventEmitter",
   "files": [
     "lib",
