--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: ./.github/actions/init
         with:
           lfs: true
+      - name: "Build"
+        run: |
+          npm run build
       - name: "test"
         run: |
           npm test
