--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0-oidc-publish-test.based-on.3.12.18",
   "description": "WWA Wing asset files",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/assets"
+  },
   "files": [
     "audio",
     "html",
