--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0-oidc-publish-test.based-on.3.12.18",
   "description": "wwawing debug server",
   "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/debug-server"
+  },
   "files": [
     "bin",
     "lib"
