--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -2,6 +2,11 @@
   "name": "@wwawing/event-emitter",
   "version": "0.0.0-oidc-publish-test.based-on.3.12.18",
   "description": "nodeでもモダンブラウザでもIE11でも使えるすごいEventEmitter",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/event-emitter"
+  },
   "files": [
     "lib",
     "module"
