--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -35,7 +35,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/WWAWing/WWALoader.git"
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/loader"
   },
   "author": "WWA Wing Team",
   "license": "MIT",
