--- a/packages/page-generator/package.json
+++ b/packages/page-generator/package.json
@@ -4,6 +4,11 @@
   "description": "a HTML file generator for WWA Wing",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/page-generator"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && shx mkdir -p output && node debug/debug.js",
