--- a/packages/serve-index/package.json
+++ b/packages/serve-index/package.json
@@ -5,6 +5,11 @@
   "author": "Douglas Christopher Wilson <doug@somethingdoug.com>, WWA Wing Team",
   "license": "MIT",
   "types": "./types/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/serve-index"
+  },
   "files": [
     "public/",
     "types/",
