--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0-oidc-publish-test.based-on.3.12.18",
   "description": "WWA Wing stylesheet files",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/styles"
+  },
   "files": [
     "output"
   ],
