--- a/packages/virtual-pad/package.json
+++ b/packages/virtual-pad/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0-oidc-publish-test.based-on.3.12.18",
   "description": "WWA Wing Virtual Pad for mobile phone",
   "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/virtual-pad"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
