--- a/packages/serve-index/package.json
+++ b/packages/serve-index/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wwawing/serve-index",
   "description": "Serve directory listings",
-  "version": "0.0.0-oidc-publish-test.based-on.3.12.18.p.1",
+  "version": "3.12.8",
   "author": "Douglas Christopher Wilson <doug@somethingdoug.com>, WWA Wing Team",
   "license": "MIT",
   "types": "./types/index.d.ts",
