--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -2,6 +2,11 @@
   "name": "@wwawing/util",
   "version": "4.1.0-unstable.based-on.3.12.19",
   "description": "WWA Wing utility package",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WWAWing/WWAWing.git",
+    "directory": "packages/util"
+  },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
