--- a/.github/actions/init/action.yml
+++ b/.github/actions/init/action.yml
@@ -49,5 +49,5 @@ runs:
 
     - name: "Install dependencies"
       shell: bash
-      if: steps.restore-node-modules.outputs.cache-hit != 'true'
+      # if: steps.restore-node-modules.outputs.cache-hit != 'true'
       run: npm ci
